set new font LayijiMaHaNiYom

--- a/public/css/font.css
+++ b/public/css/font.css
@@ -45,8 +45,29 @@
   }
   
   
+  @font-face {
+    font-family: "LayijiMaHaNiYom";
+  
+    src: url("/fonts/LayijiMahaniyomV161.woff") format("woff"), /* Modern Browsers */
+      url("/fonts/LayijiMahaniyomV161.woff2") format("woff2"); /* Modern Browsers */
+    font-weight: bold;
+    font-style: normal;
+  }
+
+
+  @font-face {
+    font-family: "LayijiMaHaNiYom";
+  
+    src: url("/fonts/LayijiMahaniyom-Bao-12.woff") format("woff"), /* Modern Browsers */
+      url("/fonts/LayijiMahaniyom-Bao-12.woff2") format("woff2"); /* Modern Browsers */
+    font-weight: normal;
+    font-style: normal;
+  }
+  
+  
+  
   html{
-    font-family: 'cs_prajad', sans-serif;
+    font-family: 'LayijiMaHaNiYom', sans-serif;
   }
 
   body{
