--- a/public/css/font.css
+++ b/public/css/font.css
@@ -45,29 +45,8 @@
   }
   
   
-  @font-face {
-    font-family: "LayijiMaHaNiYom";
-  
-    src: url("LayijiMahaniyomV161.woff") format("woff"), /* Modern Browsers */
-      url("LayijiMahaniyomV161.woff2") format("woff2"); /* Modern Browsers */
-    font-weight: bold;
-    font-style: normal;
-  }
-
-
-  @font-face {
-    font-family: "LayijiMaHaNiYom";
-  
-    src: url("LayijiMahaniyom-Bao-12.woff") format("woff"), /* Modern Browsers */
-      url("LayijiMahaniyom-Bao-12.woff2") format("woff2"); /* Modern Browsers */
-    font-weight: normal;
-    font-style: normal;
-  }
-  
-  
-  
   html{
-    font-family: 'LayijiMaHaNiYom', sans-serif;
+    font-family: 'cs_prajad', sans-serif;
   }
 
   body{
